--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en-US">
   <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <!-- Begin Jekyll SEO tag v2.5.0 -->
 <title>steam-homepage</title>
@@ -16,59 +16,66 @@
 {"headline":"steam-homepage","@type":"WebSite","url":"https://ndnkle.github.io/steam-homepage/","name":"steam-homepage","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
-	<link rel="stylesheet" href="/steam-homepage/assets/css/style.css?v=0287a76d04568de48ff4b041110c02d0019162b0">
-	<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-	<script src="/steam-homepage/assets/js/respond.js"></script>
-	<!--[if lt IE 9]>
-	  <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
-	<!--[if lt IE 8]>
-	<link rel="stylesheet" href="/steam-homepage/assets/css/ie.css">
-	<![endif]-->
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="/steam-homepage/assets/css/style.css?v=0287a76d04568de48ff4b041110c02d0019162b0">
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <script src="/steam-homepage/assets/js/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="/steam-homepage/assets/css/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   </head>
   <body>
-<table>
+
+
+    <div class="wrapper">
+
+      <section>
+
+
+        <table>
   <thead>
-	<tr>
-	  <th style="text-align: left"><a href="https://www.google.com/ncr">Google</a></th>
-	  <th style="text-align: left"><a href="https://www.google.com/imghp">Google Images</a></th>
-	  <th style="text-align: left"><a href="https://www.youtube.com/">YouTube</a></th>
-	  <th style="text-align: left"><a href="https://keep.google.com/">Google Keep</a></th>
-	  <th style="text-align: left"><a href="https://open.spotify.com/collection/playlists">Spotify</a></th>
-	</tr>
+    <tr>
+      <th style="text-align: left"><a href="https://www.google.com/ncr">Google</a></th>
+      <th style="text-align: left"><a href="https://www.google.com/imghp">Google Images</a></th>
+      <th style="text-align: left"><a href="https://www.youtube.com/">YouTube</a></th>
+      <th style="text-align: left"><a href="https://keep.google.com/">Google Keep</a></th>
+      <th style="text-align: left"><a href="https://open.spotify.com/collection/playlists">Spotify</a></th>
+    </tr>
   </thead>
   <tbody>
-	<tr>
-	  <td style="text-align: left"><a href="https://carnival.rip/">Carnival</a></td>
-	  <td style="text-align: left"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200">Carnival AM Maps</a></td>
-	  <td style="text-align: left"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131">Carnival 6 Maps</a></td>
-	  <td style="text-align: left"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614">Carnival 7 Maps</a></td>
-	  <td style="text-align: left"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1769534380">Carnival 8 Maps</a></td>
-	</tr>
-	<tr>
-	  <td style="text-align: left"><a href="https://steamcommunity.com/app/550/workshop/">Workshop</a></td>
-	  <td style="text-align: left"><a href="https://docs.google.com/document/d/1JD6H1qxIGkiPmThWQtfVLNBJZhjVOXcokHcKelg-xWY">My Addons List</a></td>
-	  <td style="text-align: left"><a href="https://www.gamemaps.com/l4d2/">GameMaps</a></td>
-	  <td style="text-align: left"> </td>
-	  <td style="text-align: left"> </td>
-	</tr>
-	<tr>
-	  <td style="text-align: left"><a href="https://pastebin.com/">Pastebin</a></td>
-	  <td style="text-align: left"> </td>
-	  <td style="text-align: left"> </td>
-	  <td style="text-align: left"> </td>
-	  <td style="text-align: left"> </td>
-	</tr>
+    <tr>
+      <td style="text-align: left"><a href="https://carnival.rip/">Carnival</a></td>
+      <td style="text-align: left"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200">Carnival AM Maps</a></td>
+      <td style="text-align: left"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131">Carnival 6 Maps</a></td>
+      <td style="text-align: left"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614">Carnival 7 Maps</a></td>
+      <td style="text-align: left"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1769534380">Carnival 8 Maps</a></td>
+    </tr>
+    <tr>
+      <td style="text-align: left"><a href="https://steamcommunity.com/app/550/workshop/">Workshop</a></td>
+      <td style="text-align: left"><a href="https://docs.google.com/document/d/1JD6H1qxIGkiPmThWQtfVLNBJZhjVOXcokHcKelg-xWY">My Addons List</a></td>
+      <td style="text-align: left"><a href="https://www.gamemaps.com/l4d2/">GameMaps</a></td>
+      <td style="text-align: left"> </td>
+      <td style="text-align: left"> </td>
+    </tr>
+    <tr>
+      <td style="text-align: left"><a href="https://pastebin.com/">Pastebin</a></td>
+      <td style="text-align: left"> </td>
+      <td style="text-align: left"> </td>
+      <td style="text-align: left"> </td>
+      <td style="text-align: left"> </td>
+    </tr>
   </tbody>
 </table>
 
 
-	  </section>
+      </section>
 
-	</div>
+    </div>
 
-	
+    
   </body>
 </html>
