--- a/index.html
+++ b/index.html
@@ -13,45 +13,42 @@
 
 </head>
 	<body>
-	<div class="wrapper">
-	<section>
+		<div class="wrapper">
+			<section>
 
-<table>
-	<thead>
-	<tr>
-	  <th style="text-align: left"><a href="https://www.google.com/ncr">Google</a></th>
-	  <th style="text-align: left"><a href="https://www.google.com/imghp">Google Images</a></th>
-	  <th style="text-align: left"><a href="https://www.youtube.com/">YouTube</a></th>
-	  <th style="text-align: left"><a href="https://keep.google.com/">Google Keep</a></th>
-	  <th style="text-align: left"><a href="https://open.spotify.com/collection/playlists">Spotify</a></th>
-	</tr>
-  </thead>
-  <tbody>
-	<tr>
-	  <td style="text-align: left"><a href="https://carnival.rip/">Carnival</a></td>
-	  <td style="text-align: left"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200">Carnival AM Maps</a></td>
-	  <td style="text-align: left"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131">Carnival 6 Maps</a></td>
-	  <td style="text-align: left"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614">Carnival 7 Maps</a></td>
-	  <td style="text-align: left"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1769534380">Carnival 8 Maps</a></td>
-	</tr>
-	<tr>
-	  <td style="text-align: left"><a href="https://steamcommunity.com/app/550/workshop/">Workshop</a></td>
-	  <td style="text-align: left"><a href="https://docs.google.com/document/d/1JD6H1qxIGkiPmThWQtfVLNBJZhjVOXcokHcKelg-xWY">My Addons List</a></td>
-	  <td style="text-align: left"><a href="https://www.gamemaps.com/l4d2/">GameMaps</a></td>
-	  <td style="text-align: left"> </td>
-	  <td style="text-align: left"> </td>
-	</tr>
-	<tr>
-	  <td style="text-align: left"><a href="https://pastebin.com/">Pastebin</a></td>
-	  <td style="text-align: left"> </td>
-	  <td style="text-align: left"> </td>
-	  <td style="text-align: left"> </td>
-	  <td style="text-align: left"> </td>
-	</tr>
-  </tbody>
-</table>
-
-	</section>
-	</div>
+				<table>
+					<tbody>
+						<tr>
+							<td style="text-align: left"><a href="https://www.google.com/ncr">Google</a></th>
+							<td style="text-align: left"><a href="https://www.google.com/imghp">Google Images</a></th>
+							<td style="text-align: left"><a href="https://www.youtube.com/">YouTube</a></th>
+							<td style="text-align: left"><a href="https://keep.google.com/">Google Keep</a></th>
+							<td style="text-align: left"><a href="https://open.spotify.com/collection/playlists">Spotify</a></th>
+						</tr>
+						<tr>
+							<td style="text-align: left"><a href="https://carnival.rip/">Carnival</a></td>
+							<td style="text-align: left"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200">Carnival AM Maps</a></td>
+							<td style="text-align: left"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131">Carnival 6 Maps</a></td>
+							<td style="text-align: left"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614">Carnival 7 Maps</a></td>
+							<td style="text-align: left"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1769534380">Carnival 8 Maps</a></td>
+						</tr>
+						<tr>
+							<td style="text-align: left"><a href="https://steamcommunity.com/app/550/workshop/">Workshop</a></td>
+							<td style="text-align: left"><a href="https://docs.google.com/document/d/1JD6H1qxIGkiPmThWQtfVLNBJZhjVOXcokHcKelg-xWY">My Addons List</a></td>
+							<td style="text-align: left"><a href="https://www.gamemaps.com/l4d2/">GameMaps</a></td>
+							<td style="text-align: left"> </td>
+							<td style="text-align: left"> </td>
+						</tr>
+						<tr>
+							<td style="text-align: left"><a href="https://pastebin.com/">Pastebin</a></td>
+							<td style="text-align: left"> </td>
+							<td style="text-align: left"> </td>
+							<td style="text-align: left"> </td>
+							<td style="text-align: left"> </td>
+						</tr>
+					</tbody>
+				</table>
+			</section>
+		</div>
 	</body>
 </html>
