--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<table>
 					<tbody>
 						<tr>
-							<td style="text-align: left"><a href="https://www.google.com/ncr">Google</a></th>
+							<td style="text-align: left"><a href="https://www.google.com/ncr" target="_blank">Google</a></th>
 							<td style="text-align: left"><a href="https://www.google.com/imghp">Google Images</a></th>
 							<td style="text-align: left"><a href="https://www.youtube.com/">YouTube</a></th>
 							<td style="text-align: left"><a href="https://keep.google.com/">Google Keep</a></th>
