--- a/index.html
+++ b/index.html
@@ -1,16 +1,8 @@
 <!doctype html>
 <html lang="en-US">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-<title>steam-homepage</title>
-
+	<title>steam-homepage2</title>
 	<link rel="stylesheet" href="/steam-homepage/assets/css/style.css?v=0287a76d04568de48ff4b041110c02d0019162b0">
-	<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-	<script src="/steam-homepage/assets/js/respond.js"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
 </head>
 	<body>
 		<div class="wrapper">
