--- a/index.html
+++ b/index.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color: #252525; font: 15px/40px Verdana;">
+
 <style>
-a:link {text-decoration: none; color: #fcba03;}
-a:visited {text-decoration: none; color: #fcba03;}
-a:hover {text-decoration: none; color: #fcdf03;}
-a:active {text-decoration: none; color: #fcdf03;}
-table, td {border: 2px solid black; border-collapse: collapse;}
-td {text-align: center; width: 130px;}
+	table {margin-left: auto; margin-right: auto;}
+	body {background-color: #252525; font: 15px/40px Verdana;}
+	table, td {border-style: solid; border-width: 1px; border-color: #696969; border-collapse: collapse;}
+	td {text-align: center; width: 160px;}
+	a:link {text-decoration: none; color: #fcba03;}
+	a:visited {text-decoration: none; color: #fcba03;}
+	a:hover {text-decoration: none; color: #fcdf03;}
+	a:active {text-decoration: none; color: #fcdf03;}
 </style>
+
 <br>
 <br>
-<table align="center">
-  <tbody>
-    <tr>
-      <td><a href="https://www.google.com/ncr">Google</a></td>
-      <td><a href="https://www.google.com/imghp">Google Images</a></td>
-      <td><a href="https://www.youtube.com/">YouTube</a></td>
-      <td><a href="https://keep.google.com/">Google Keep</a></td>
-      <td><a href="https://open.spotify.com/collection/playlists">Spotify</a></td>
-    </tr>
-    <tr>
-      <td><a href="https://www.google.com/ncr">Google</a></td>
-      <td><a href="https://www.google.com/ncr">Google</a></td>
-      <td><a href="https://www.google.com/ncr">Google</a></td>
-      <td><a href="https://www.google.com/ncr">Google</a></td>
-      <td><a href="https://www.google.com/ncr">Google</a></td>
-    </tr>
-    <tr>
-      <td><a href="https://www.google.com/ncr">Google</a></td>
-      <td><a href="https://www.google.com/ncr">Google</a></td>
-      <td><a href="https://www.google.com/ncr">Google</a></td>
-      <td><a href="https://www.google.com/ncr">Google</a></td>
-      <td><a href="https://www.google.com/ncr">Google</a></td>
-    </tr>
-    <tr>
-      <td><a href="https://www.google.com/ncr">Google</a></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-  </tbody>
+<table>
+<tbody>
+	<tr>
+		<td><a href="https://www.google.com/ncr">Google</a></td>
+		<td><a href="https://www.google.com/imghp">Google Images</a></td>
+		<td><a href="https://www.youtube.com/">YouTube</a></td>
+		<td><a href="https://keep.google.com/">Google Keep</a></td>
+		<td><a href="https://open.spotify.com/collection/playlists">Spotify</a></td>
+	</tr>
+	<tr>
+		<td><a href="https://carnival.rip/">Carnival</a></td>
+		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200">Carnival AM Maps</a></td>
+		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131">Carnival 6 Maps</a></td>
+		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614">Carnival 7 Maps</a></td>
+		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1769534380">Carnival 8 Maps</a></td>
+	</tr>
+	<tr>
+		<td><a href="https://steamcommunity.com/app/550/workshop/">Workshop</a></td>
+		<td><a href="https://docs.google.com/document/d/1JD6H1qxIGkiPmThWQtfVLNBJZhjVOXcokHcKelg-xWY">My Addons List</a></td>
+		<td><a href="https://www.gamemaps.com/l4d2/">GameMaps</a></td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td><a href="https://pastebin.com/">Pastebin</a></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+</tbody>
 </table>
 </body>
 </html>
