--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+<title>steam-homepage2</title>
 <style>
 	table {margin-left: auto; margin-right: auto;}
 	body {background-color: #252525; font: 15px/40px Verdana;}
@@ -11,6 +12,7 @@
 	a:hover {text-decoration: none; color: #fcdf03;}
 	a:active {text-decoration: none; color: #fcdf03;}
 </style>
+</head>
 
 <br>
 <br>
