--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
 <title>steam-homepage2</title>
+
 <style>
 	table {margin-left: auto; margin-right: auto;}
 	body {background-color: #252525; font: 15px/40px Verdana;}
