--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	table {margin-left: auto; margin-right: auto;}
 	body {background-color: #252525; font: 15px/40px Verdana;}
 	table, td {border-style: solid; border-width: 1px; border-color: #696969; border-collapse: collapse; border-left: none; border-right: none;}
-	td {text-align: center; width: 160px; border-left: none; border-right: none;}
+	td {text-align: left; width: 170px; padding-left: 10px;}
 	a:link {text-decoration: none; color: #fcba03;}
 	a:visited {text-decoration: none; color: #fcba03;}
 	a:hover {text-decoration: none; color: #fcdf03;}
