--- a/index.html
+++ b/index.html
@@ -23,32 +23,32 @@
 <tbody>
 	<tr>
 		<td><a href="https://www.google.com/ncr">Google</a></td>
-		<td><a href="https://carnival.rip">Carnival</a></td>
-		<td><a href="https://steamcommunity.com/app/550/workshop">Workshop</a></td>
+		<td><a href="https://carnival.rip/">Carnival</a></td>
+		<td><a href="https://steamcommunity.com/app/550/workshop/">Workshop</a></td>
 	</tr>
 	<tr>
-		<td><a href="https://www.google.com/imghp">Google Images</a></td>
+		<td><a href="https://keep.google.com/">Google Keep</a></td>
 		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200">Carnival AM Maps</a></td>
-		<td><a href="https://docs.google.com/document/d/1JD6H1qxIGkiPmThWQtfVLNBJZhjVOXcokHcKelg-xWY">My Addons List</a></td>
+		<td><a href="https://www.gamemaps.com/l4d2/">GameMaps</a></td>
 	</tr>
 	<tr>
-		<td><a href="https://keep.google.com">Google Keep</a></td>
+		<td><a href="https://www.youtube.com/">YouTube</a></td>
 		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131">Carnival 6 Maps</a></td>
-		<td><a href="https://www.gamemaps.com/l4d2">GameMaps</a></td>
-	</tr>
-	<tr>
-		<td><a href="https://www.youtube.com">YouTube</a></td>
-		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614">Carnival 7 Maps</a></td>
-		<td><a href="https://pastebin.com">Pastebin</a></td>
+		<td><a href="https://docs.google.com/document/d/1JD6H1qxIGkiPmThWQtfVLNBJZhjVOXcokHcKelg-xWY/edit">My Addons List</a></td>
 	</tr>
 	<tr>
 		<td><a href="https://open.spotify.com/collection/playlists">Spotify</a></td>
+		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614">Carnival 7 Maps</a></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td><a href="https://vk.com/">VK</a></td>
 		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1769534380">Carnival 8 Maps</a></td>
 		<td></td>
 	</tr>
 	<tr>
-		<td><a href="https://vk.com">VK</a></td>
-		<td><a href="https://docs.google.com/document/d/1SLecCLXbO_binyLdWj-Tq5D-zbGHbKc105c0EtP1dC0">Map Commands</a></td>
+		<td></td>
+		<td><a href="https://docs.google.com/document/d/1SLecCLXbO_binyLdWj-Tq5D-zbGHbKc105c0EtP1dC0/edit">Map Commands</a></td>
 		<td></td>
 	</tr>
 </tbody>
