--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<td><a href="https://steamcommunity.com/app/550/workshop/">Workshop</a></td>
 	</tr>
 	<tr>
-		<td><a href="https://keep.google.com/">Google Keep</a></td>
+		<td><a href="https://start.duckduckgo.com/">DuckDuckGo</a></td>
 		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200">Carnival AM Maps</a></td>
 		<td><a href="https://www.gamemaps.com/l4d2/">GameMaps</a></td>
 	</tr>
@@ -42,12 +42,12 @@
 		<td></td>
 	</tr>
 	<tr>
-		<td></td>
+		<td><a href="https://steamid.io/">Steam ID</a></td>
 		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1769534380">Carnival 8 Maps</a></td>
 		<td></td>
 	</tr>
 	<tr>
-		<td></td>
+		<td><a href="https://www.maxmind.com/en/geoip-demo">GeoIP</a></td>
 		<td><a href="https://docs.google.com/document/d/1SLecCLXbO_binyLdWj-Tq5D-zbGHbKc105c0EtP1dC0/edit">Map Commands</a></td>
 		<td></td>
 	</tr>
