--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 
 <meta charset="UTF-8">
+<meta name="robots" content="noindex">
+
 <title>steam-homepage2</title>
 
 <style>
@@ -22,33 +24,33 @@
 <table>
 <tbody>
 	<tr>
-		<td><a href="https://www.google.com/ncr" rel="noopener noreferrer">Google</a></td>
-		<td><a href="https://carnival.rip/" rel="noopener noreferrer">Carnival</a></td>
-		<td><a href="https://steamcommunity.com/app/550/workshop/" rel="noopener noreferrer">Workshop</a></td>
+		<td><a href="https://www.google.com/ncr" rel="noopener noreferrer nofollow nofollow">Google</a></td>
+		<td><a href="https://carnival.rip/" rel="noopener noreferrer nofollow nofollow">Carnival</a></td>
+		<td><a href="https://steamcommunity.com/app/550/workshop/" rel="noopener noreferrer nofollow nofollow">Workshop</a></td>
 	</tr>
 	<tr>
-		<td><a href="https://start.duckduckgo.com/" rel="noopener noreferrer">DuckDuckGo</a></td>
-		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200" rel="noopener noreferrer">Carnival AM Maps</a></td>
-		<td><a href="https://www.gamemaps.com/l4d2/" rel="noopener noreferrer">GameMaps</a></td>
+		<td><a href="https://start.duckduckgo.com/" rel="noopener noreferrer nofollow nofollow">DuckDuckGo</a></td>
+		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200" rel="noopener noreferrer nofollow">Carnival AM Maps</a></td>
+		<td><a href="https://www.gamemaps.com/l4d2/" rel="noopener noreferrer nofollow">GameMaps</a></td>
 	</tr>
 	<tr>
-		<td><a href="https://open.spotify.com/collection/playlists" rel="noopener noreferrer">Spotify</a></td>
-		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer">Carnival 6 Maps</a></td>
-		<td><a href="https://docs.google.com/document/d/1JD6H1qxIGkiPmThWQtfVLNBJZhjVOXcokHcKelg-xWY/edit" rel="noopener noreferrer">My Addons List</a></td>
+		<td><a href="https://open.spotify.com/collection/playlists" rel="noopener noreferrer nofollow">Spotify</a></td>
+		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">Carnival 6 Maps</a></td>
+		<td><a href="https://docs.google.com/document/d/1JD6H1qxIGkiPmThWQtfVLNBJZhjVOXcokHcKelg-xWY/edit" rel="noopener noreferrer nofollow">My Addons List</a></td>
 	</tr>
 	<tr>
-		<td><a href="https://steamid.io/" rel="noopener noreferrer">Steam ID</a></td>
-		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614" rel="noopener noreferrer">Carnival 7 Maps</a></td>
+		<td><a href="https://steamid.io/" rel="noopener noreferrer nofollow">Steam ID</a></td>
+		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614" rel="noopener noreferrer nofollow">Carnival 7 Maps</a></td>
 		<td></td>
 	</tr>
 	<tr>
-		<td><a href="https://www.maxmind.com/en/geoip-demo" rel="noopener noreferrer">GeoIP</a></td>
-		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1769534380" rel="noopener noreferrer">Carnival 8 Maps</a></td>
+		<td><a href="https://www.maxmind.com/en/geoip-demo" rel="noopener noreferrer nofollow">GeoIP</a></td>
+		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1769534380" rel="noopener noreferrer nofollow">Carnival 8 Maps</a></td>
 		<td></td>
 	</tr>
 	<tr>
-		<td><a href="https://vk.com/" rel="noopener noreferrer">VK</a></td>
-		<td><a href="https://docs.google.com/document/d/1SLecCLXbO_binyLdWj-Tq5D-zbGHbKc105c0EtP1dC0/edit" rel="noopener noreferrer">Map Commands</a></td>
+		<td><a href="https://vk.com/" rel="noopener noreferrer nofollow">VK</a></td>
+		<td><a href="https://docs.google.com/document/d/1SLecCLXbO_binyLdWj-Tq5D-zbGHbKc105c0EtP1dC0/edit" rel="noopener noreferrer nofollow">Map Commands</a></td>
 		<td></td>
 	</tr>
 </tbody>
