--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 <table>
 <tbody>
 	<tr>
-		<td><a href="https://www.google.com/ncr" rel="noopener noreferrer nofollow nofollow">Google</a></td>
-		<td><a href="https://carnival.rip/" rel="noopener noreferrer nofollow nofollow">Carnival</a></td>
-		<td><a href="https://steamcommunity.com/app/550/workshop/" rel="noopener noreferrer nofollow nofollow">Workshop</a></td>
+		<td><a href="https://www.google.com/ncr" rel="noopener noreferrer nofollow">Google</a></td>
+		<td><a href="https://carnival.rip/" rel="noopener noreferrer nofollow">Carnival</a></td>
+		<td><a href="https://steamcommunity.com/app/550/workshop/" rel="noopener noreferrer nofollow">Workshop</a></td>
 	</tr>
 	<tr>
-		<td><a href="https://start.duckduckgo.com/" rel="noopener noreferrer nofollow nofollow">DuckDuckGo</a></td>
+		<td><a href="https://start.duckduckgo.com/" rel="noopener noreferrer nofollow">DuckDuckGo</a></td>
 		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200" rel="noopener noreferrer nofollow">Carnival AM Maps</a></td>
 		<td><a href="https://www.gamemaps.com/l4d2/" rel="noopener noreferrer nofollow">GameMaps</a></td>
 	</tr>
