--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 <table>
 <tbody>
 	<tr>
-		<td><a href="https://www.google.com/ncr" rel="noopener noreferrer nofollow">Google</a></td>
+		<td><a href="https://start.duckduckgo.com/" rel="noopener noreferrer nofollow">DuckDuckGo</a></td>
 		<td><a href="https://carnival.rip/" rel="noopener noreferrer nofollow">Carnival</a></td>
 		<td><a href="https://steamcommunity.com/app/550/workshop/" rel="noopener noreferrer nofollow">Workshop</a></td>
 	</tr>
 	<tr>
-		<td><a href="https://start.duckduckgo.com/" rel="noopener noreferrer nofollow">DuckDuckGo</a></td>
+		<td><a href="https://www.notion.so/" rel="noopener noreferrer nofollow">Notion</a></td>
 		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200" rel="noopener noreferrer nofollow">Carnival AM Maps</a></td>
 		<td><a href="https://www.gamemaps.com/l4d2/" rel="noopener noreferrer nofollow">GameMaps</a></td>
 	</tr>
 	<tr>
-		<td><a href="https://open.spotify.com/collection/playlists" rel="noopener noreferrer nofollow">Spotify</a></td>
+		<td><a href="https://www.spotify.com/us/" rel="noopener noreferrer nofollow">Spotify</a></td>
 		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">Carnival 6 Maps</a></td>
 		<td><a href="https://docs.google.com/document/d/1JD6H1qxIGkiPmThWQtfVLNBJZhjVOXcokHcKelg-xWY/edit" rel="noopener noreferrer nofollow">My Addons List</a></td>
 	</tr>
