--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<td><a href="https://steamcommunity.com/app/550/workshop/" rel="noopener noreferrer nofollow">Workshop</a></td>
 	</tr>
 	<tr>
-		<td><a href="https://www.notion.so/" rel="noopener noreferrer nofollow">Notion</a></td>
+		<td><a href="https://www.google.com/ncr" rel="noopener noreferrer nofollow">Google</a></td>
 		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200" rel="noopener noreferrer nofollow">Carnival AM Maps</a></td>
 		<td><a href="https://www.gamemaps.com/l4d2/" rel="noopener noreferrer nofollow">GameMaps</a></td>
 	</tr>
@@ -39,17 +39,17 @@
 		<td><a href="https://docs.google.com/document/d/1JD6H1qxIGkiPmThWQtfVLNBJZhjVOXcokHcKelg-xWY/edit" rel="noopener noreferrer nofollow">My Addons List</a></td>
 	</tr>
 	<tr>
-		<td><a href="https://steamid.io/" rel="noopener noreferrer nofollow">Steam ID</a></td>
+		<td><a href="https://www.notion.so/" rel="noopener noreferrer nofollow">Notion</a></td>
 		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614" rel="noopener noreferrer nofollow">Carnival 7 Maps</a></td>
-		<td></td>
-	</tr>
-	<tr>
-		<td><a href="https://www.maxmind.com/en/geoip-demo" rel="noopener noreferrer nofollow">GeoIP</a></td>
-		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1769534380" rel="noopener noreferrer nofollow">Carnival 8 Maps</a></td>
-		<td></td>
+		<td><a href="https://steamid.io/" rel="noopener noreferrer nofollow">Steam ID</a></td>
 	</tr>
 	<tr>
 		<td><a href="https://vk.com/" rel="noopener noreferrer nofollow">VK</a></td>
+		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1769534380" rel="noopener noreferrer nofollow">Carnival 8 Maps</a></td>
+		<td><a href="https://www.maxmind.com/en/geoip-demo" rel="noopener noreferrer nofollow">GeoIP</a></td>
+	</tr>
+	<tr>
+		<td></td>
 		<td><a href="https://docs.google.com/document/d/1SLecCLXbO_binyLdWj-Tq5D-zbGHbKc105c0EtP1dC0/edit" rel="noopener noreferrer nofollow">Map Commands</a></td>
 		<td></td>
 	</tr>
