--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	</tr>
 	<tr>
 		<td></td>
-		<td><a href="https://docs.google.com/document/d/1SLecCLXbO_binyLdWj-Tq5D-zbGHbKc105c0EtP1dC0/edit" rel="noopener noreferrer nofollow">Map Commands</a></td>
+		<td><a href="carnival_maps.html" rel="noopener noreferrer nofollow">Map Commands</a></td>
 		<td></td>
 	</tr>
 </tbody>
