--- a/carnival_maps.html
+++ b/carnival_maps.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta name="robots" content="noindex">
 
-<meta charset="UTF-8">
-<meta name="robots" content="noindex">
+	<title>Carnival Maps</title>
 
-<title>Carnival Maps</title>
-
-<style>
-	body {background-color: #252525; font: 15px/40px Verdana; line-height: 25px; margin:auto; display: table;}
-	p {margin-top: 0; margin-bottom: 0; color: #808080;}
-	a:link, a:visited {text-decoration: none; color: #fcba03;}
-	a:hover, a:active {text-decoration: none; color: #fcdf03;}
-</style>
-
+	<style>
+		body {background-color: #252525; font: 15px/40px Verdana; line-height: 25px; display: table; margin-left: auto; margin-right: auto; margin-top: 10%;}
+		p {margin-top: 0; margin-bottom: 0; color: #808080;}
+		a:link, a:visited {text-decoration: none; color: #fcba03;}
+		a:hover, a:active {text-decoration: none; color: #fcdf03;}
+	</style>
 </head>
-
-<br>
-<br>
 
 <h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200" rel="noopener noreferrer nofollow">Carnival AM Maps</a></h2>
 
