--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+	<meta charset="UTF-8">
+	<meta name="robots" content="noindex">
 
-<meta charset="UTF-8">
-<meta name="robots" content="noindex">
+	<title>Steam Homepage</title>
 
-<title>steam-homepage2</title>
-
-<style>
-	table {margin-left: auto; margin-right: auto;}
-	body {background-color: #252525; font: 15px/40px Verdana;}
-	table, td {border-style: solid; border-width: 1px; border-color: #696969; border-collapse: collapse; border-left: none; border-right: none;}
-	td {text-align: left; width: 170px; padding-left: 35px;}
-	a:link, a:visited {text-decoration: none; color: #fcba03;}
-	a:hover, a:active {text-decoration: none; color: #fcdf03;}
-</style>
-
+	<style>
+		table {margin-left: auto; margin-right: auto; margin-top: 10%;}
+		body {background-color: #252525; font: 15px/40px Verdana;}
+		table, td {border-style: solid; border-width: 1px; border-color: #696969; border-collapse: collapse; border-left: none; border-right: none;}
+		td {text-align: left; width: 170px; padding-left: 35px;}
+		a:link, a:visited {text-decoration: none; color: #fcba03;}
+		a:hover, a:active {text-decoration: none; color: #fcdf03;}
+	</style>
 </head>
-
-<br>
-<br>
 
 <table>
 <tbody>
@@ -36,21 +32,21 @@
 	<tr>
 		<td><a href="https://www.spotify.com/us/" rel="noopener noreferrer nofollow">Spotify</a></td>
 		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">Carnival 6 Maps</a></td>
-		<td><a href="https://steamid.io/" rel="noopener noreferrer nofollow">Steam ID</a></td>
+		<td><a href="https://docs.google.com/document/d/1JD6H1qxIGkiPmThWQtfVLNBJZhjVOXcokHcKelg-xWY/edit" rel="noopener noreferrer nofollow">My Addons List</a></td>
 	</tr>
 	<tr>
 		<td><a href="https://www.notion.so/" rel="noopener noreferrer nofollow">Notion</a></td>
 		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614" rel="noopener noreferrer nofollow">Carnival 7 Maps</a></td>
-		<td><a href="https://www.maxmind.com/en/geoip-demo" rel="noopener noreferrer nofollow">GeoIP</a></td>
+		<td><a href="https://steamid.io/" rel="noopener noreferrer nofollow">Steam ID</a></td>
 	</tr>
 	<tr>
 		<td><a href="https://vk.com/" rel="noopener noreferrer nofollow">VK</a></td>
 		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1769534380" rel="noopener noreferrer nofollow">Carnival 8 Maps</a></td>
-		<td></td>
+		<td><a href="https://www.maxmind.com/en/geoip-demo" rel="noopener noreferrer nofollow">GeoIP</a></td>
 	</tr>
 	<tr>
 		<td></td>
-		<td><a href="carnival_maps.html" rel="noopener noreferrer nofollow">Map Commands</a></td>
+		<td><a href="carnival_maps" rel="noopener noreferrer nofollow">Map Commands</a></td>
 		<td></td>
 	</tr>
 </tbody>
