--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Steam Homepage</title>
 
 	<style>
-		table {margin-left: auto; margin-right: auto; margin-top: 10%;}
+		table {margin-left: auto; margin-right: auto; margin-top: 5%;}
 		body {background-color: #252525; font: 15px/40px Verdana;}
 		table, td {border-style: solid; border-width: 1px; border-color: #696969; border-collapse: collapse; border-left: none; border-right: none;}
 		td {text-align: left; width: 170px; padding-left: 35px;}
@@ -46,7 +46,7 @@
 	</tr>
 	<tr>
 		<td></td>
-		<td><a href="carnival_maps" rel="noopener noreferrer nofollow">Map Commands</a></td>
+		<td><a href="map_commands" rel="noopener noreferrer nofollow">Map Commands</a></td>
 		<td></td>
 	</tr>
 </tbody>
