--- a/map_commands.html
+++ b/map_commands.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="robots" content="noindex">
 
-	<title>Carnival Maps</title>
+	<title>Map Commands</title>
 
 	<style>
 		body {background-color: #252525; font: 15px/40px Verdana; line-height: 25px; display: table; margin-left: auto; margin-right: auto; margin-top: 5%;}
