--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<meta name="robots" content="noindex">
-
 	<title>Steam Homepage</title>
-
 	<style>
-		table {margin-left: auto; margin-right: auto; margin-top: 5%;}
 		body {background-color: #252525; font: 15px/40px Verdana;}
-		table, td {border-style: solid; border-width: 1px; border-color: #696969; border-collapse: collapse; border-left: none; border-right: none;}
-		td {text-align: left; width: 170px; padding-left: 35px;}
 		a:link, a:visited {text-decoration: none; color: #fcba03;}
 		a:hover, a:active {text-decoration: none; color: #fcdf03;}
+		table {margin-left: auto; margin-right: auto; margin-top: 5%;}
+		table, td {border-style: solid; border-width: 1px; border-color: #696969; border-collapse: collapse; border-left: none; border-right: none;}
+		td {text-align: left; width: 170px; padding-left: 35px;}
 	</style>
 </head>
 
+<body>
 <table>
 <tbody>
 	<tr>
