--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<tr>
 		<td><a href="https://www.spotify.com/us/" rel="noopener noreferrer nofollow">Spotify</a></td>
 		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">Carnival 6 Maps</a></td>
-		<td><a href="https://steamid.io/" rel="noopener noreferrer nofollow">SteamID</a></td>
+		<td><a href="https://steamid.io/" rel="noopener noreferrer nofollow">Steam ID</a></td>
 	</tr>
 	<tr>
 		<td><a href="https://www.notion.so/" rel="noopener noreferrer nofollow">Notion</a></td>
@@ -44,7 +44,7 @@
 	</tr>
 	<tr>
 		<td></td>
-		<td><a href="map_commands" rel="noopener noreferrer nofollow">Map Commands</a></td>
+		<td><a href="map-commands" rel="noopener noreferrer nofollow">Map Commands</a></td>
 		<td></td>
 	</tr>
 </tbody>
