--- a/map-commands.html
+++ b/map-commands.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="robots" content="noindex">
-	<title>Steam Homepage</title>
+	<title>Map Commands</title>
 	<style>
 		body {background-color: #252525; font: 15px/40px Verdana; line-height: 25px; display: table; margin-left: auto; margin-right: auto; margin-top: 5%;}
 		a:link, a:visited {text-decoration: none; color: #fcba03;}
