--- a/map-commands.html
+++ b/map-commands.html
@@ -78,22 +78,52 @@
 <!-- Carnival 6 Maps (Wannamingo) -->
 <h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">Carnival 6 Maps (Wannamingo)</a></h2>
 
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121221044" rel="noopener noreferrer nofollow">Beldurra</a>
+<p>callvote ChangeMission</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=141632373" rel="noopener noreferrer nofollow">City 17</a>
+<p>callvote ChangeMission City17l4d2</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=316053033" rel="noopener noreferrer nofollow">Devil Mountain</a>
+<p>callvote ChangeMission DevilMountain</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=381451006" rel="noopener noreferrer nofollow">Haunted Forest</a>
+<p>callvote ChangeMission hauntedforest</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=342322228" rel="noopener noreferrer nofollow">Military Industrial Complex II</a>
+<p>callvote ChangeMission</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=210088171" rel="noopener noreferrer nofollow">Precinct 84</a>
 <p>callvote ChangeMission precinct84l4d2</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=339143805" rel="noopener noreferrer nofollow">Questionable Ethics</a>
 <p>callvote ChangeMission QuestionableEthics</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=339599340" rel="noopener noreferrer nofollow">Questionable Ethics 2 (QE Alpha Test)</a>
 <p>callvote ChangeMission QuestionableEthicsAlphaTest</p>
-<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=141632373" rel="noopener noreferrer nofollow">City 17</a>
-<p>callvote ChangeMission City17l4d2</p>
-<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1198103174" rel="noopener noreferrer nofollow">Prison Break</a>
-<p>callvote ChangeMission Prison</p>
-<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1777261975" rel="noopener noreferrer nofollow">Project Auburn L4D1 Direct Port</a>
-<p>callvote ChangeMission projectauburn</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1597747675" rel="noopener noreferrer nofollow">Suicide Blitz (L4D1 port)</a>
+<p>callvote ChangeMission</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=151833267" rel="noopener noreferrer nofollow">Tank Challenge</a>
+<p>callvote ChangeMission</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121086524" rel="noopener noreferrer nofollow">Urban Flight</a>
+<p>callvote ChangeMission urbanflight</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1905306467" rel="noopener noreferrer nofollow">Vienna Calling 2 (real version 3)</a>
 <p>callvote ChangeMission VC2xy6</p>
-<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1208023333" rel="noopener noreferrer nofollow">Echo v3</a>
-<p>callvote ChangeMission xxxEchoxxx</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=143565981" rel="noopener noreferrer nofollow">We Don't Go To Ravenholm</a>
+<p>callvote ChangeMission</p>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=1600285281" rel="noopener noreferrer nofollow">Absolute Zero</a>
+<p>callvote ChangeMission</p>
+
+<!-- Old -->
+<!-- <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=210088171" rel="noopener noreferrer nofollow">Precinct 84</a> -->
+<!-- <p>callvote ChangeMission precinct84l4d2</p> -->
+<!-- <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=339143805" rel="noopener noreferrer nofollow">Questionable Ethics</a> -->
+<!-- <p>callvote ChangeMission QuestionableEthics</p> -->
+<!-- <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=339599340" rel="noopener noreferrer nofollow">Questionable Ethics 2 (QE Alpha Test)</a> -->
+<!-- <p>callvote ChangeMission QuestionableEthicsAlphaTest</p> -->
+<!-- <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=141632373" rel="noopener noreferrer nofollow">City 17</a> -->
+<!-- <p>callvote ChangeMission City17l4d2</p> -->
+<!-- <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1198103174" rel="noopener noreferrer nofollow">Prison Break</a> -->
+<!-- <p>callvote ChangeMission Prison</p> -->
+<!-- <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1777261975" rel="noopener noreferrer nofollow">Project Auburn L4D1 Direct Port</a> -->
+<!-- <p>callvote ChangeMission projectauburn</p> -->
+<!-- <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1905306467" rel="noopener noreferrer nofollow">Vienna Calling 2 (real version 3)</a> -->
+<!-- <p>callvote ChangeMission VC2xy6</p> -->
+<!-- <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1208023333" rel="noopener noreferrer nofollow">Echo v3</a> -->
+<!-- <p>callvote ChangeMission xxxEchoxxx</p> -->
 
 <!-- Carnival 7 Maps (inactive) -->
 <h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614" rel="noopener noreferrer nofollow">Carnival 7 Maps (inactive)</a></h2>
