--- a/map-commands.html
+++ b/map-commands.html
@@ -14,7 +14,7 @@
 
 <body>
 <!-- Carnival AM Maps -->
-<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200" rel="noopener noreferrer nofollow">Carnival AM Maps</a></h2>
+<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200" rel="noopener noreferrer nofollow">Carnival AM Maps (2020-01-19)</a></h2>
 
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=141632373" rel="noopener noreferrer nofollow">City 17</a>
 <p>callvote ChangeMission City17l4d2</p>
@@ -22,7 +22,7 @@
 <p>callvote ChangeMission nightterror</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=339143805" rel="noopener noreferrer nofollow">Questionable Ethics</a>
 <p>callvote ChangeMission QuestionableEthics</p>
-<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=339599340" rel="noopener noreferrer nofollow">Questionable Ethics 2 (QE Alpha Test)</a>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=339599340" rel="noopener noreferrer nofollow">Questionable Ethics 2</a>
 <p>callvote ChangeMission QuestionableEthicsAlphaTest</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121086524" rel="noopener noreferrer nofollow">Urban Flight</a>
 <p>callvote ChangeMission urbanflight</p>
@@ -92,7 +92,7 @@
 <p>callvote ChangeMission precinct84l4d2</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=339143805" rel="noopener noreferrer nofollow">Questionable Ethics</a>
 <p>callvote ChangeMission QuestionableEthics</p>
-<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=339599340" rel="noopener noreferrer nofollow">Questionable Ethics 2 (QE Alpha Test)</a>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=339599340" rel="noopener noreferrer nofollow">Questionable Ethics 2</a>
 <p>callvote ChangeMission QuestionableEthicsAlphaTest</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1597747675" rel="noopener noreferrer nofollow">Suicide Blitz (L4D1 port)</a>
 <p>callvote ChangeMission SuicideBlitzL4D1port</p>
