--- a/map-commands.html
+++ b/map-commands.html
@@ -76,36 +76,72 @@
 <p>callvote ChangeMission Chernobyl</p>
 
 <!-- Carnival 6 Maps (Wannamingo) -->
-<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">Carnival 6 Maps (Wannamingo) (2020-09-16)</a></h2>
+<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">Carnival 6 Maps (Wannamingo) (2020-11-19)</a></h2>
 
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121221044" rel="noopener noreferrer nofollow">Beldurra</a>
 <p>callvote ChangeMission Beldurra</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1880838761" rel="noopener noreferrer nofollow">Blood Tracks Official</a>
+<p>callvote ChangeMission BloodTracks</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=141632373" rel="noopener noreferrer nofollow">City 17</a>
 <p>callvote ChangeMission City17l4d2</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=123678867" rel="noopener noreferrer nofollow">Dead before Dawn DC</a>
+<p>callvote ChangeMission dbd2dc</p>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=286470200" rel="noopener noreferrer nofollow">Deadbeat Escape</a>
+<p>callvote ChangeMission DeadbeatEscape</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1733246596" rel="noopener noreferrer nofollow">Death Sentence</a>
+<p>callvote ChangeMission deathSentence</p>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=121808319" rel="noopener noreferrer nofollow">Death Woods</a>
+<p>callvote ChangeMission DeathWoods</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121275675" rel="noopener noreferrer nofollow">Detour Ahead</a>
+<p>callvote ChangeMission detourahead</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=316053033" rel="noopener noreferrer nofollow">Devil Mountain</a>
 <p>callvote ChangeMission DevilMountain</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=634688101" rel="noopener noreferrer nofollow">Die Screaming II</a>
+<p>callvote ChangeMission dscream</p>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=121054321" rel="noopener noreferrer nofollow">Downtown Dine</a>
+<p>callvote ChangeMission DowntownDine</p>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=526662686" rel="noopener noreferrer nofollow">Energy Crisis</a>
+<p>callvote ChangeMission energycrisis</p>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=372031503" rel="noopener noreferrer nofollow">Fatal Freight</a>
+<p>callvote ChangeMission FatalFreight</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=381451006" rel="noopener noreferrer nofollow">Haunted Forest</a>
 <p>callvote ChangeMission hauntedforest</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1903680769" rel="noopener noreferrer nofollow">Haunted Forest (real version 3)</a>
+<p>callvote ChangeMission hauntedforest</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1505389481" rel="noopener noreferrer nofollow">Lost v2</a>
+<p>callvote ChangeMission lostv2</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=342322228" rel="noopener noreferrer nofollow">Military Industrial Complex II</a>
 <p>callvote ChangeMission MIC2</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1118755074" rel="noopener noreferrer nofollow">Night Terror 2013</a>
+<p>callvote ChangeMission nt2013</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=210088171" rel="noopener noreferrer nofollow">Precinct 84</a>
 <p>callvote ChangeMission precinct84l4d2</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=339143805" rel="noopener noreferrer nofollow">Questionable Ethics</a>
 <p>callvote ChangeMission QuestionableEthics</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=339599340" rel="noopener noreferrer nofollow">Questionable Ethics 2</a>
 <p>callvote ChangeMission QuestionableEthicsAlphaTest</p>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=121225704" rel="noopener noreferrer nofollow">SaltHell Park</a>
+<p>callvote ChangeMission SaltHellPark</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1597747675" rel="noopener noreferrer nofollow">Suicide Blitz (L4D1 port)</a>
 <p>callvote ChangeMission SuicideBlitzL4D1port</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=151833267" rel="noopener noreferrer nofollow">Tank Challenge</a>
 <p>callvote ChangeMission TankChallenge</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1702647775" rel="noopener noreferrer nofollow">Tour of Terror</a>
+<p>callvote ChangeMission tot</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121086524" rel="noopener noreferrer nofollow">Urban Flight</a>
 <p>callvote ChangeMission urbanflight</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1905306467" rel="noopener noreferrer nofollow">Vienna Calling 2 (real version 3)</a>
 <p>callvote ChangeMission VC2xy6</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121796400" rel="noopener noreferrer nofollow">Warcelona</a>
+<p>callvote ChangeMission warcelona</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=143565981" rel="noopener noreferrer nofollow">We Don't Go To Ravenholm</a>
 <p>callvote ChangeMission ravenholmwar2</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1643520526" rel="noopener noreferrer nofollow">Whispers of Winter</a>
+<p>callvote ChangeMission whispersofwinter</p>
 <a href="https://steamcommunity.com/workshop/filedetails/?id=1600285281" rel="noopener noreferrer nofollow">Absolute Zero</a>
 <p>callvote ChangeMission Z3r04Bs0lut3971</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2274787444" rel="noopener noreferrer nofollow">Buried Deep</a>
+<p>callvote ChangeMission BuriedDeep</p>
 
 <!-- Carnival 7 Maps (inactive) -->
 <h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614" rel="noopener noreferrer nofollow">Carnival 7 Maps (inactive)</a></h2>
