--- a/map-commands.html
+++ b/map-commands.html
@@ -102,8 +102,8 @@
 <p>callvote ChangeMission DowntownDine</p>
 <a href="https://steamcommunity.com/workshop/filedetails/?id=526662686" rel="noopener noreferrer nofollow">Energy Crisis</a>
 <p>callvote ChangeMission energycrisis</p>
-<a href="https://steamcommunity.com/workshop/filedetails/?id=372031503" rel="noopener noreferrer nofollow">Fatal Freight</a>
-<p>callvote ChangeMission FatalFreight</p>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=372031503" rel="noopener noreferrer nofollow">Fatal Freight (Fixed Version)</a>
+<p>callvote ChangeMission fatalfreight1</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=381451006" rel="noopener noreferrer nofollow">Haunted Forest</a>
 <p>callvote ChangeMission hauntedforest</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1903680769" rel="noopener noreferrer nofollow">Haunted Forest (real version 3)</a>
