--- a/map-commands.html
+++ b/map-commands.html
@@ -14,7 +14,7 @@
 
 <body>
 <!-- Carnival AM Maps -->
-<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200" rel="noopener noreferrer nofollow">Carnival AM Maps (2020-01-19)</a></h2>
+<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=408882200" rel="noopener noreferrer nofollow">Carnival AM Maps (Updated 19 Jan @ 7:01pm)</a></h2>
 
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=141632373" rel="noopener noreferrer nofollow">City 17</a>
 <p>callvote ChangeMission City17l4d2</p>
@@ -76,7 +76,7 @@
 <p>callvote ChangeMission Chernobyl</p>
 
 <!-- Carnival 6 Maps (Wannamingo) -->
-<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">Carnival 6 Maps (Wannamingo) (2020-11-19)</a></h2>
+<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">Carnival 6 Maps (Wannamingo) (Updated 19 Nov @ 3:02pm)</a></h2>
 
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121221044" rel="noopener noreferrer nofollow">Beldurra</a>
 <p>callvote ChangeMission Beldurra</p>
