--- a/map-commands.html
+++ b/map-commands.html
@@ -143,6 +143,89 @@
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2274787444" rel="noopener noreferrer nofollow">Buried Deep</a>
 <p>callvote ChangeMission BuriedDeep</p>
 
+<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">Carnival 6 Maps (Wannamingo) (8 Jan @ 8:20pm)</a></h2>
+
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121086524" rel="noopener noreferrer nofollow">Urban Flight</a>
+<p>callvote ChangeMission urbanflight</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121221044" rel="noopener noreferrer nofollow">Beldurra</a>
+<p>callvote ChangeMission Beldurra</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=141632373" rel="noopener noreferrer nofollow">City 17</a>
+<p>callvote ChangeMission City17l4d2</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=143565981" rel="noopener noreferrer nofollow">We Don't Go To Ravenholm</a>
+<p>callvote ChangeMission ravenholmwar2</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=151833267" rel="noopener noreferrer nofollow">Tank Challenge</a>
+<p>callvote ChangeMission TankChallenge</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=210088171" rel="noopener noreferrer nofollow">Precinct 84</a>
+<p>callvote ChangeMission precinct84l4d2</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=316053033" rel="noopener noreferrer nofollow">Devil Mountain</a>
+<p>callvote ChangeMission DevilMountain</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=339143805" rel="noopener noreferrer nofollow">Questionable Ethics</a>
+<p>callvote ChangeMission QuestionableEthics</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=339599340" rel="noopener noreferrer nofollow">Questionable Ethics 2</a>
+<p>callvote ChangeMission QuestionableEthicsAlphaTest</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=342322228" rel="noopener noreferrer nofollow">Military Industrial Complex II</a>
+<p>callvote ChangeMission MIC2</p>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=1600285281" rel="noopener noreferrer nofollow">Absolute Zero</a>
+<p>callvote ChangeMission Z3r04Bs0lut3971</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1905306467" rel="noopener noreferrer nofollow">Vienna Calling 2 (real version 3)</a>
+<p>callvote ChangeMission VC2xy6</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1505389481" rel="noopener noreferrer nofollow">Lost v2</a>
+<p>callvote ChangeMission lostv2</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1702647775" rel="noopener noreferrer nofollow">Tour of Terror</a>
+<p>callvote ChangeMission tot</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2346732134" rel="noopener noreferrer nofollow">Kink</a>
+<p>callvote ChangeMission kinkbyblo</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=503741689" rel="noopener noreferrer nofollow">Labirinferno</a>
+<p>callvote ChangeMission Labirinferno</p>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=2351207953" rel="noopener noreferrer nofollow">Heaven Can Wait (L4D2 HardVersion)</a>
+<p>callvote ChangeMission Heaven</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=164537090" rel="noopener noreferrer nofollow">Plan B</a>
+<p>callvote ChangeMission PlanBv051</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2271458225" rel="noopener noreferrer nofollow">Claustrophobia</a>
+<p>callvote ChangeMission claustrophobia</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=858831772" rel="noopener noreferrer nofollow">The Cure</a>
+<p>callvote ChangeMission TheCure</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=855642599" rel="noopener noreferrer nofollow">Skipping Class</a>
+<p>callvote ChangeMission SkippingClass</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2108461892" rel="noopener noreferrer nofollow">Lockdown DLC</a>
+<p>callvote ChangeMission Lockdown</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1899905248" rel="noopener noreferrer nofollow">Fallen 2019</a>
+<p>callvote ChangeMission fallen</p>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=2163065271" rel="noopener noreferrer nofollow">Divine Cybermancy</a>
+<p>callvote ChangeMission eye</p>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=1600285281" rel="noopener noreferrer nofollow">epilogue absolute zero</a>
+<p>callvote ChangeMission newyearabsoluta</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1700494189" rel="noopener noreferrer nofollow">The Manor - Escape Game</a>
+<p>callvote ChangeMission TheManor</p>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=1928497500" rel="noopener noreferrer nofollow">Silent Hill: Otherside of Life</a>
+<p>callvote ChangeMission shoolf</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=854169313" rel="noopener noreferrer nofollow">Stargate SG-4 v2</a>
+<p>callvote ChangeMission Stargate</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1653318165" rel="noopener noreferrer nofollow">True FangShi</a>
+<p>callvote ChangeMission TrueFangShi</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=893913550" rel="noopener noreferrer nofollow">Complex Course</a>
+<p>callvote ChangeMission complexcourseR</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1817763184" rel="noopener noreferrer nofollow">Escape From Valencia v2</a>
+<p>callvote ChangeMission EFV</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121078656" rel="noopener noreferrer nofollow">A Dam Mission</a>
+<p>callvote ChangeMission adammission</p>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=934254791" rel="noopener noreferrer nofollow">Left 4 Duluth 2017</a>
+<p>callvote ChangeMission left4duluth17</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=381815995" rel="noopener noreferrer nofollow">Left Behind</a>
+<p>callvote ChangeMission behind</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=459178109" rel="noopener noreferrer nofollow">Pitch Dark Mesa</a>
+<p>callvote ChangeMission pdm</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=283329040" rel="noopener noreferrer nofollow">7 Hours Later II</a>
+<p>callvote ChangeMission 7HoursLaterII</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=825356629" rel="noopener noreferrer nofollow">Mass Maze</a>
+<p>callvote ChangeMission MassMaze</p>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=157016556" rel="noopener noreferrer nofollow">Blackout Basement</a>
+<p>callvote ChangeMission BlackoutBasement</p>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=387588541" rel="noopener noreferrer nofollow">The Hive</a>
+<p>callvote ChangeMission TheHive</p>
+<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2257961887" rel="noopener noreferrer nofollow">Time to Die</a>
+<p>callvote ChangeMission TimeKHMC</p>
+
 <!-- Carnival 7 Maps (inactive) -->
 <h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614" rel="noopener noreferrer nofollow">Carnival 7 Maps (inactive)</a></h2>
 
