--- a/map-commands.html
+++ b/map-commands.html
@@ -143,7 +143,7 @@
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2274787444" rel="noopener noreferrer nofollow">Buried Deep</a>
 <p>callvote ChangeMission BuriedDeep</p>
 
-<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">Carnival 6 Maps (Wannamingo) (8 Jan @ 8:20pm)</a></h2>
+<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">Carnival 6 Maps (Wannamingo) (Updated 8 Jan @ 8:20pm)</a></h2>
 
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121086524" rel="noopener noreferrer nofollow">Urban Flight</a>
 <p>callvote ChangeMission urbanflight</p>
