--- a/map-commands.html
+++ b/map-commands.html
@@ -75,6 +75,7 @@
 <a href="https://steamcommunity.com/workshop/filedetails/?id=1646203073" rel="noopener noreferrer nofollow">Chernobyl: Chapter One</a>
 <p>callvote ChangeMission Chernobyl</p>
 
+<!-- Carnival 6 Maps (Wannamingo) -->
 <h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">Carnival 6 Maps (Wannamingo) (Updated 8 Jan @ 8:20pm)</a></h2>
 
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121086524" rel="noopener noreferrer nofollow">Urban Flight</a>
@@ -125,7 +126,7 @@
 <p>callvote ChangeMission fallen</p>
 <a href="https://steamcommunity.com/workshop/filedetails/?id=2163065271" rel="noopener noreferrer nofollow">Divine Cybermancy</a>
 <p>callvote ChangeMission eye</p>
-<a href="https://steamcommunity.com/workshop/filedetails/?id=1600285281" rel="noopener noreferrer nofollow">epilogue absolute zero</a>
+<a href="https://steamcommunity.com/workshop/filedetails/?id=1600285281" rel="noopener noreferrer nofollow">Epilogue absolute zero</a>
 <p>callvote ChangeMission newyearabsoluta</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1700494189" rel="noopener noreferrer nofollow">The Manor - Escape Game</a>
 <p>callvote ChangeMission TheManor</p>
