--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="robots" content="noindex">
+	<meta name="robots" content="none">
 	<title>Steam Homepage</title>
 	<style>
 		body {background-color: #252525; font: 15px/40px Verdana;}
