--- a/map-commands.html
+++ b/map-commands.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="robots" content="noindex">
+	<meta name="robots" content="none">
 	<title>Map Commands</title>
 	<style>
 		body {background-color: #252525; font: 15px/40px Verdana; line-height: 25px; display: table; margin-left: auto; margin-right: auto; margin-top: 5%;}
