--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<td><a href="https://www.maxmind.com/en/geoip-demo" rel="noopener noreferrer nofollow">GeoIP</a></td>
 	</tr>
 	<tr>
-		<td><a href="https://vk.com/" rel="noopener noreferrer nofollow">VK</a></td>
+		<td><a href="https://vk.com/bookmarks?type=group" rel="noopener noreferrer nofollow">VK</a></td>
 		<td><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1769534380" rel="noopener noreferrer nofollow">Carnival 8 Maps</a></td>
 		<td></td>
 	</tr>
